[project]
name = "nl-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.0",
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "imblearn>=0.0",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
